new_project/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: survey-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: survey-app
  template:
    metadata:
      labels:
        app: survey-app
    spec:
      containers:
      - name: survey-app
        image: survey-app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: survey-app
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: survey-app
